[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failed-build-test"
version = "1.0.0"
description = "Test repo with failing build and vulnerable dependencies"
requires-python = ">=3.8"
dependencies = [
    "requests==2.19.1",
    "urllib3==1.24.1",
    "pyyaml==5.3.1",
    "flask==0.12.2",
]

[tool.setuptools]
py-modules = ["app"]
