[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failed-build-test"
version = "1.0.0"
description = "Test repo with failing build and vulnerable dependencies"
requires-python = ">=3.8"
dependencies = [
    "requests==2.25.0",
    "urllib3==1.26.5",
    "flask==2.0.0",
]

[tool.setuptools]
py-modules = ["app"]
