[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failed-build-test"
version = "1.0.0"
description = "Test repo with failing build and vulnerable dependencies"
requires-python = ">=3.8"
dependencies = [
    "requests==2.32.4",
    "urllib3==2.6.3",
    "flask==2.2.5",
]

[tool.setuptools]
py-modules = ["app"]
